# mcp_study

./: .env.example  .gitignore  README.md  pyproject.toml  troubleshooting-2025-06-19.md  web_server.py
application/: chatbot.py  llm_adapter.py  llm_factory.py  multi_server_chatbot.py  openai_adapter.py
servers/: arxiv_server.py
web/: index.html  script.js  style.css
