[project]
name = "mcp-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "mcp>=1.9.4",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.5.0",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
